Fix flickering with follow button in profile component

--- a/ngLoreHunter/src/app/shared/components/profile/profile.component.css
+++ b/ngLoreHunter/src/app/shared/components/profile/profile.component.css
@@ -265,6 +265,11 @@ dt {
   text-decoration: none;
 }
 
+.user-stats-label > a:hover {
+  color: #f44336;
+  text-decoration: underline;
+}
+
 .pairs-justified {
   display: flex;
   flex-wrap: wrap;
@@ -707,7 +712,7 @@ dt {
 
 .user-stats-label {
   -webkit-tap-highlight-color: transparent;
-  font-size: 15px;
+  font-size: 20px;
   line-height: normal;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   letter-spacing: 0;
@@ -724,20 +729,9 @@ dt {
 }
 
 .user-stats-label:hover {
-  -webkit-tap-highlight-color: transparent;
-  font-size: 15px;
-  line-height: normal;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
-  letter-spacing: 0;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -webkit-box-direction: normal;
-  display: inline-block;
-  box-sizing: border-box;
-  padding: 2px 0;
-  font-weight: 700;
-  text-align: center;
-  min-width: 32px;
-  transform: translateY(-2px);
   cursor: pointer;
+}
+
+.followBtn {
+  min-width: 82px;
 }
